# books_dataset_kaggle

./: README.md  app.py  pyproject.toml  solution.ipynb
