[tool.poetry]
name = "books_project"
version = "0.1.0"
description = ""
authors = ["pawknes <pawknes@wp.pl>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.1.1"
jupyter = "^1.0.0"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
streamlit = "^1.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

